force-app/main/default/objects/Document_Type__mdt/Document_Type__mdt.object-meta.xml
<CustomObject>
    <description>Drives the AI Document Splitter classification prompt. Each active record represents one document type the AI can recognize. Type Code is the stable key returned by the model, Classification Hints describe the visual cues, and Sort Order resolves priority on ambiguous overlaps.</description>
    <label>Document Type</label>
    <pluralLabel>Document Types</pluralLabel>
</CustomObject>