force-app/main/default/objects/Document_Type__mdt/fields/Capture_Source__c.field-meta.xml
<CustomField>
    <fullName>Capture_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the classification prompt also returns the issuing institution name (e.g. Chase, Wells Fargo) for documents of this type.</description>
    <inlineHelpText>Check for types where the issuing institution matters (e.g. Bank Statement → Chase, Wells Fargo). The classification prompt will ask the AI to return the source name and the splitter will include it in the saved file name.</inlineHelpText>
    <label>Capture Source Institution</label>
    <type>Checkbox</type>
</CustomField>