force-app/main/default/objects/Document_Type__mdt/fields/Classification_Hints__c.field-meta.xml
<CustomField>
    <fullName>Classification_Hints__c</fullName>
    <description>Keywords and layout cues the vision model uses to recognize this document type.</description>
    <inlineHelpText>Visual and textual cues the AI uses to recognize this document type — letterhead, layout, key phrases, form numbers. The more specific the cues, the better the classification accuracy.</inlineHelpText>
    <label>Classification Hints</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>