force-app/main/default/objects/Document_Type__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only active types are injected into the classification prompt. Toggling false retires a type without deleting historical references.</description>
    <inlineHelpText>Only Active types are injected into the classification prompt. Uncheck to retire a type without deleting it — preserves the audit trail of past splits that used this type.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>