force-app/main/default/objects/Document_Type__mdt/fields/Is_Fallback__c.field-meta.xml
<CustomField>
    <fullName>Is_Fallback__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Exactly one active record must be the fallback. Pages that match no other type are classified as this type.</description>
    <inlineHelpText>Exactly one active record must be the fallback. Pages the AI cannot classify into another type become this type. Do not check more than one record.</inlineHelpText>
    <label>Is Fallback</label>
    <type>Checkbox</type>
</CustomField>