force-app/main/default/objects/Document_Type__mdt/fields/Review_Prompt_Route__c.field-meta.xml
<CustomField>
    <fullName>Review_Prompt_Route__c</fullName>
    <description>Routes document review to a smaller Prompt Builder template for the document family.</description>
    <inlineHelpText>Enter the review prompt route bucket, such as BANK_STATEMENT, TAX_RETURN, IDENTITY, ENTITY_FORMATION, FINANCIAL_STATEMENT, BUSINESS_DOCUMENT, WAGE_INCOME, or GENERIC.</inlineHelpText>
    <label>Review Prompt Route</label>
    <length>80</length>
    <type>Text</type>
</CustomField>