force-app/main/default/objects/Document_Type__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Order in which this type appears in the prompt. Also used as tie-break priority in SegmentMerger when overlapping segments conflict.</description>
    <inlineHelpText>Lower numbers appear earlier in the AI prompt and win priority ties when two segments overlap. Leave gaps (10, 20, 30…) so new types can be inserted without renumbering all rows.</inlineHelpText>
    <label>Sort Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>