force-app/main/default/objects/Document_Type__mdt/fields/Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Type_Code__c</fullName>
    <description>Stable upper-snake-case key returned by the classification prompt (e.g. BANK_STATEMENT).</description>
    <inlineHelpText>Stable identifier used by Apex and prompts (e.g. BANK_STATEMENT). Do not change once a type is published — rename the label instead, since downstream code matches on this value.</inlineHelpText>
    <label>Type Code</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>